Mon Nov 15 13:48:26 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* man/po4a/Makefile.am (clean-local): Remove; distclean-hook in
	  man/Rules.man already takes care of this (thanks, Denis Barbier).

Sun Nov 14 22:12:21 GMT 2010  Colin Watson  <cjwatson@debian.org>

	Prevent repeated rescans when a link is broken.  Thanks to Daniel
	Isenmann for debugging information.

	* src/check_mandirs.c (test_manfile): Explicitly delete bad links
	  from the database.
	  (count_glob_matches, purge_whatis, purge_missing): Extract the
	  database mtime, and ignore any pages at least as old as that for
	  the purposes of deciding whether a whatis entry has been replaced
	  by a real page.
	* src/tests/mandb-3: New test.
	* src/tests/Makefile.am (ALL_TESTS): Add mandb-3.
	* NEWS: Document this.

Wed Nov  3 23:40:25 GMT 2010  Jordi Mallach  <jordi@gnu.org>

	* po/ca.po: Update from Translation Project.

Wed Nov  3 20:27:46 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* src/catman.c (parse_for_sec): Explicitly pass -S before section
	  number, to reduce ambiguity.
	* src/man.c (main): In catman mode, never try to guess whether a
	  page argument is a section, as it's too easy to get this wrong
	  (Ubuntu bug #664211).

Fri Oct 29 07:25:44 BST 2010  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.h (pipeline_install_post_fork): Clarify that this is
	  run in the child process.
	  (pipeline_wait_all): Clarify that SIGPIPE is considered equivalent
	  to exiting zero.

Fri Oct 29 06:18:31 BST 2010  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipecmd_new_sequencev): New function.
	  (pipecmd_new_sequence): Rewrite in terms of pipecmd_new_sequence.
	  (pipeline_new_command_argv): New function.
	  (pipeline_new_command_args): Rewrite in terms of
	  pipeline_new_command_argv.
	  (pipeline_command_argv): New function.
	  (pipeline_command_args): Rewrite in terms of
	  pipeline_command_argv.
	* lib/pipeline.h (pipecmd_new_sequencev, pipeline_new_command_argv,