@@ -1,3 +1,9 @@
+Mon Nov 15 21:38:04 GMT 2010  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (local_man_loop): Simplify and improve code to make a
+	  temporary copy of manpathlist, in order that it can't free
+	  unallocated memory (may fix Savannah bug #31633).
+
 Mon Nov 15 13:48:26 GMT 2010  Colin Watson  <cjwatson@debian.org>
 
 	* man/po4a/Makefile.am (clean-local): Remove; distclean-hook in
